# ai-lego-bricks

./: .dockerignore  .env.example  .flake8  .gitignore  CLAUDE.md  CREDENTIAL_MIGRATION_GUIDE.md  Dockerfile  GETTING_STARTED.md  MISSING_FUNCTIONS.md  README.md  STREAMING_GUIDE.md  TODO  __init__.py  _import_utils.py  conversation_workflow_example.py  docker-compose.yml  model_list.md  pyproject.toml  requirements.txt  setup_ai_lego_bricks.sh  start_visualizer.sh  test_agents.sh  test_imports.py  test_subfolder_imports.py  test_tool_calling_end_to_end.py
.github/workflows/: release.yml  test.yml
The Brick Books/: chunking brick book.md  image generation brick book.md  prompt brick book.md  services brick book.md  tools brick book.md  tts brick book.md
agent_logs/: README.md  agent_logger.py  log_viewer.py
agent_orchestration/: PYTHON_FUNCTION_NODES.md  README.md  __init__.py  async_orchestrator.py  conditional-workflows-guide.md  models.py  orchestrator.py  step_handlers.py  streaming_buffer.py  test_loop_back.py  tool_registry.py
agent_orchestration/examples/: AI_COORDINATOR_README.md  JSON_PROPS_README.md  MULTI_AGENT_README.md  ai_coordinator_agent.json  anthropic_chat_agent.json  basic_chat_agent.json  chat_with_voice_agent.json  (+39 more)
ailego/: __init__.py  cli.py  core.py
chat/: CLAUDE.md  README.md  __init__.py  chat_service.py  conversation_service.py  example_usage.py
chunking/: CLAUDE.md  __init__.py  chunking_factory.py  chunking_service.py  example_usage.py
claude-knowledge/: AGENT_ORCHESTRATION_GUIDE.md  AGENT_ORCHESTRATION_OVERVIEW.md  CLAUDE.md  CREDENTIAL_MANAGEMENT.md  PROJECT_STRUCTURE.md  README.md  STRUCTURED_RESPONSES.md  agent-orchestration-guide.md  claude-guidelines.md  claude-knowledge-readme.md  http-request-service-guide.md  image-generation-reference.md  json-props-extension-guide.md  llm-architecture-overview.md  memory-reference.md  ollama-server-info.md  project-structure-overview.md  prompt-management-guide.md  stt-reference.md  universal-tool-service-guide.md  visual-content-processing-guide.md
credentials/: README.md  __init__.py  credential_manager.py
examples/: README.md  agent_integration_example.py  concept_evaluation_example.py  openrouter_integration_example.py  prompt_management_example.py  run_agent.py  run_agent_debug.py  run_agent_interactive.py  run_agent_simple.py  streaming_example.py  streaming_integration_demo.py  test_enhanced_streaming.py  tts_workflow_example.py
image_generation/: __init__.py  example_usage.py  image_generation_clients.py  image_generation_factory.py  image_generation_service.py  image_generation_types.py
llm/: README.md  __init__.py  anthropic_example.py  embedding_client.py  generation_service.py  llm_factory.py  llm_types.py  model_manager.py  model_switching_example.py  ollama-server-config.md  quick_model_switching_example.py  text_clients.py  thinking_tokens_service.py  vision_clients.py
memory/: README.md  __init__.py  graph_formatter_service.py  memory_example.py  memory_factory.py  memory_service.py  neo4j_memory_service.py  supabase_memory_service.py
pdf_to_text/: CLAUDE.md  README.md  __init__.py  example_usage.py  pdf_to_text_service.py  test_with_gemini.py  visual_to_text_service.py
prompt/: README.md  README_CONCEPT_EVAL.md  __init__.py  concept_eval_models.py  concept_eval_storage.py  concept_evaluation_service.py  concept_judge.py  eval_builder.py  evaluation_service.py  example_usage.py  prompt_models.py  prompt_registry.py  prompt_service.py  prompt_storage.py  run_coordinator_evaluations.py
services/: http_request_service.py
setup/: README.md  SUPABASE_SETUP.md  setup_supabase.py  setup_supabase_pgvector.sql
stt/: README.md  __init__.py  stt_clients.py  stt_factory.py  stt_service.py  stt_types.py
test/: __init__.py  test_bulk_delete.py  test_chunking_service.py  test_delete_operations.py
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_chunking_service.py  test_cli.py  test_core.py  test_http_request_service.py  test_http_step_handler.py  test_memory_services.py  test_runner.py  vcr_config.py
tools/: README.md  __init__.py  example_tools.py  example_workflow.py  image_cropping_tool.py  mcp_config.py  mcp_server_manager.py  mcp_tool_executor.py  mcp_types.py  pdf_to_base64_tool.py  provider_adapters.py  secure_example_tools.py  secure_tool_executor.py  secure_tools_demo.py  tool_registry.py  tool_service.py  tool_types.py
tts/: CLAUDE.md  __init__.py  example_usage.py  streaming_tts_service.py  tts_clients.py  tts_factory.py  tts_service.py  tts_types.py
visualizer/: README.md  __init__.py  mermaid_generator.py  workflow_parser.py
(+158 files in other folders)
